--- a/bibliography.bib
+++ b/bibliography.bib
@@ -102,6 +102,12 @@
     urldate = {2020-04-20}
 }
 
+@online{TPM,
+    title = {{Architecture of an application system that uses a TP monitor}},
+    url = {https://web.archive.org/web/20161205210910/http://www.hypergurl.com/blog/databases/architecture-tp-monitor.html},
+    urldate = {2025-03-20}
+}
+
 @online{PostrgreSQL,
     url = {https://www.postgresql.org/docs/},
     urldate = {2020-05-20}
@@ -875,7 +881,7 @@
 @online{TransactionMonitors,
 	title = {{Системы управления базами данных — коротко о главном}},
 	url = {https://www.jetinfo.ru/sistemy-upravleniya-bazami-dannyh-korotko-o-glavnom-chast-3/},
-	urldate = {2024-06-12}
+	urldate = {2025-03-20}
 }
 
 @online{FixProtocols,
