--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -221,7 +221,7 @@ DCE (Distributed Computing Environment)~--- это система програм
     \caption{Понятие распределенной транзакции}
 \end{figure}
 
-\subsubsection{Модель обработки транзакций} ~\\
+\subsubsection{Модель обработки транзакций}
 
 Распределенная транзакция выполняет операции над данными, расположенными на нескольких сетевых узлах (серверах) одновременно. 
 В распределенных СУБД обработка транзакций значительно усложняется, так как требуется обеспечить согласованность изменений на 
@@ -238,31 +238,49 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Мониторы обработки транзакций}~\\
 
-Мониторы обработки транзакций (Transaction Processing Monitor - TPM), или мониторы
-транзакций - программные системы, предназначенные для поддержки выполнения распределённых транзакций.
-Они относятся к категории middleware, то есть к ПО, работающему между ОС и приложениями \autocite{TransactionMonitors}.
+Мониторы обработки транзакций (Transaction Processing Monitor - TPM) — специализированное промежуточное программное обеспечение (middleware), 
+обеспечивающее выполнение распределенных транзакций. TPM координируют работу нескольких серверов баз данных, гарантируя соблюдение ACID-свойств 
+(атомарность, согласованность, изолированность, долговечность) для распределенных транзакций \autocite{TransactionMonitors}.
 
-Это происходит следующим образом: клиент начинает транзакцию и обращается к TPM, который выдаёт ему
-идентификатор транзакции и контекст транзакции. Затем клиент с помощью RPC обращается к серверу,
-включая контекст в обращение. Сервер извлекает контекст, уведомляет TPM о том, что он (сервер) участвует
-в транзакции, и обрабатывает запрос как обычно. Так коиент обращается ко всем необходимым серверам. 
-Когда клиент достиг окончания транзакции, он уведомляет об этом TPM, и тот выполняет протокол двухфазного коммита
-для всех серверов, участвовавших в транзакции. После завершения протокола TPM уведомляет об этом клиента (Рис. \ref{tpm_process}). \autocite{WebServices}
+Архитектура приложений, использующих монитор обработки транзакций, состоит из трех частей \autocite{TPM}.
+
+\begin{itemize}
+    \item Уровень графического интерфейса - находится на компьютере клиента.
+    \item Прикладной уровень - находится на множестве отдельных серверов приложений.
+    \item Уровень данных - находится на отдельных серверах баз данных.
+\end{itemize}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/distributed/TPM.png}
+    \caption{Архитектура приложений, использующих TPM}
+\end{figure}
+
+Архитектура системы обработки транзакций: 
+
+\begin{itemize} 
+    \item Прикладная программа — определяет границы транзакций, устанавливает конкретные действия, которые будет выполнять транзакция, и контролирует операции с данными, вызывая менеджеры ресурсов. 
+    \item Менеджеры ресурсов — обеспечивают доступ к общим ресурсам, таким как базы данных, системы очередей сообщений и другие компоненты распределенной системы. 
+    \item Менеджер транзакций — отвечает за создание транзакций, мониторинг их выполнения и координацию успешного завершения или отката при возникновении ошибок. 
+\end{itemize}
+
+Процесс обработки распределенной транзакции включает следующие шаги (рис. \ref{tpm_process}):
+
+\begin{itemize}
+    \item Клиент инициирует транзакцию, обращаясь к TPM, который генерирует идентификатор транзакции и создает контекст транзакции.
+    \item Клиент взаимодействует с серверами ресурсов через удаленные вызовы процедур (RPC), передавая в каждом запросе контекст транзакции.
+    \item Сервер извлекает контекст, регистрируется в TPM как участник транзакции и обрабатывает запрос.
+    \item По завершении всех операций клиент уведомляет TPM о необходимости фиксации или отката транзакции.
+    \item TPM координирует двухфазный протокол фиксации (2PC) между всеми участвующими серверами, обеспечивая атомарность транзакции \autocite{WebServices}.
+(Рис. \ref{tpm_process}). 
+\end{itemize}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/distributed/TPM_arch.png}
     \caption{Процесс взаимодействия с TPM}
-	\label{tpm_process}
+    \label{tpm_process}
 \end{figure}
-
-TPM опираются на трехзвенную модель "клиент-сервер" (модель сервера приложений или AS-модель), описанную в Разделе 2.
-Естественно, что все преимущества модели отражаются и на программных системах, построенных на ее основе.
-
-На современном рынке мониторов транзакций основными "действующими лицами" являются такие системы,
-как ACMS (DEC), CICS (IBM), TOP END (NCR), PATHWAY (Tandem), ENCINA (Transarc), TUXEDO System (USL).
-Несмотря на принципиальное сходство, конкретные TPM отличаются рядом характеристик, причем
-различия часто вытекают как из специфики операционной системы, в которой реализован и функционирует TPM.
 
 \subsubsection{Корпоративная среда обработки транзакций}~\\
 
