Change content of subsection 6.3.4

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -284,37 +284,29 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Корпоративная среда обработки транзакций}~\\
 
-TPM на базе UNIX опирается на фундаментальное понятие - корпоративную среду обработки транзакций
-(Enterprise Transaction Processing - ETP). Архитектура ETP - это три ряда компьютеров \autocite{TransactionMonitors}:
+Корпоративная среда обработки транзакций представляет собой комплексную инфраструктуру для выполнения распределенных транзакций в масштабах 
+предприятия. Архитектура ETP строится на трех уровнях компьютерных систем \autocite{TransactionMonitors}:
+
 \begin{itemize}
-    \item Ряд 1: Персональные станции (Personal Workstations);
-    \item Ряд 2: Компьютеры под управлением ОС UNIX (UNIX Transaction Processing Servers - UPTS);
-    \item Ряд 3: Mainframe-системы (Proprietary Transaction Processing Servers - PTPS)
-    или компьютеры под управлением UNIX c RISC-архитектурой процессоров;
+    \item Ряд 1: Персональные станции - рабочие станции пользователей, обеспечивающие интерфейс взаимодействия с системой;
+    \item Ряд 2: Компьютеры под управлением ОС UNIX, на которых функционирует ядро TPM, и, как правило, реляционные СУБД, выступающие в качестве менеджера ресурсов;
+    \item Ряд 3: Mainframe-системы или компьютеры под управлением UNIX c RISC-архитектурой процессоров;
 \end{itemize}
-
-Компьютеры \textbf{ряда 1}, функционирующие под управлением DOS, MS Windows, OS/2, UNIX, используются в качестве рабочих мест
-конечных пользователей. Характерная черта ETP - отсутствие ограничений на модели компьютеров,
-составляющих этот ряд. Однако, как правило, ряд 1 состоит из компьютеров на базе процессоров Intel
-486/Pentium под управлением MS Windows (MS Windows фактически стала стандартом оконного графического интерфейса
-для большинства категорий пользователей и стандартом операционной среды для подавляющего числа прикладных программ и систем) \autocite{TransactionMonitors}.
-
-\textbf{Ряд 2} составляют компьютеры среднего класса под управлением ОС UNIX,
-на которых функционирует ядро TPM и, как правило, реляционные СУБД (Oracle, Informix, Ingres),
-выступающие в качестве менеджера ресурсов. Кроме того, на них же может быть установлен шлюз к TPM в
-операционной среде мэйнфрейма (как правило, разработчики TPM на базе UNIX предусматривают в конфигурации своих
-систем шлюз к наиболее популярной такой системе - IBM CICS) \autocite{TransactionMonitors}.
-
-\textbf{Ряд 3} представлен мэйнфреймами или RISC-компьютерами под управлением UNIX. О мэйнфреймах мы
-говорим в тех ситуациях, когда исторически сложилось так, что в организации они существуют уже долгое время,
-берут на себя большую часть всего объема обработки транзакций, концетрируют огромные вычислительные
-ресурсы и содержат большие массивы данных (то есть речь идет об унаследованных системах). Если этого
-"тяжелого наследия" нет, то можно смело использовать в качестве компьютеров ряда 3 RISC-серверы,
-сегодня приближающиеся по производительности к мэйнфреймам \autocite{TransactionMonitors}.
 
 Таким образом, среда обработки транзакций формируется из набора разнородных компьютеров (и соответствующих ОС),
 ранжируемых от персональных компьютеров до мэйнфрейм-систем. TPM на базе UNIX представляет собой своего
 рода "клей", который связывает вместе компьютеры трех рядов в открытую унифицированную среду обработки транзакций.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/distributed/ETP.png}
+    \caption{Промышленная среда обработки транзакций}
+\end{figure}
+
+При этом трехуровневая архитектура ETP характерна преимущественно для организаций, где исторически используются мэйнфреймы(типично для Европы 
+и США). Для российских - более характерна двухуровневая архитектура ETP, включающая только клиентский уровень и серверы приложений/БД. При 
+этом следует различать трехзвенную модель "клиент-сервер" (см. раздел 6.1 "Распределенные вычислительные среды"), относящуюся к логической 
+организации, и архитектуру ETP, описывающую физическое распределение вычислительных ресурсов.
 
 Ключом к интеграции систем, функционирующих на компьютерах различных рядов, является специализированный
 интерфейс прикладного программирования ATMI (Application Transaction Manager Interface), обеспечивающий \autocite{TransactionMonitors}:
@@ -325,11 +317,6 @@ TPM на базе UNIX опирается на фундаментальное п
     запросов к серверам, выполняющимся на компьютерах ряда 3
     \item для ряда 3 - обработку запросов, поступающих от серверов ряда 2
 \end{itemize}
-
-Стоит отметить, что подобное представление о корпоративной среде обработки транзакций не является абстракцией.
-Сегодня многие организации приходят именно к такой, "трехуровневой"  архитектуре информационных
-систем (с той оговоркой, что наличие ряда 3 вызвано историческими причинами - мэйнфреймы использовались
-первоначально и сразу от них отказаться невозможно).
 
 \subsection{Протоколы фиксации}
 
