feat: add a source of information to the bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1208,3 +1208,11 @@
     title={Oracle Database Reference. Part III Dynamic Performance Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
 }
+
+@article{ASDViews,
+	title={ASDViews (relational databases)},
+	author={{C. Garvey, A. Wu}},
+	journal={Proceedings. 1988 IEEE Symposium on Security and Privacy},
+	year={1988},
+	publisher={IEEE}
+}
