--- a/part/security.tex
+++ b/part/security.tex
@@ -201,6 +201,8 @@ Access List для пользователей, имеющих доступ к т
 
 \subsubsection{Архитектура ASD\_Views}
 
+Информация взята из \autocite{ASDViews}
+
 ASD\_Views –  это модель, использующая представления (views) в качестве объектов, обеспечивающих безопасность. 
 Основной целью данной модели является минимизация доверенной вычислительной базы (TCB – Trusted Computing Base). 
 Минимизация, в свою очередь, необходима для соответствия критериям класса B2 и выше.
