Rewriting the contents of subsections 6.4.1-6.4.1

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -320,159 +320,82 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsection{Протоколы фиксации}
 
-Протоколы фиксации используются для обеспечения атомарности транзакций между сайтами.
-Транзакция, которая выполняется на нескольких сайтах, должна быть либо зафиксирована на всех сайтах, либо прервана на всех сайтах.
-Недопустимо, чтобы транзакция была зафиксирована на одном сайте и прервана на другом.
-В локальной системе базы данных для принятия транзакции диспетчер транзакций должен только передать решение
-о фиксации диспетчеру восстановления. Однако в распределенной системе диспетчер транзакций должен передать
-решение о фиксации всем серверам в различных сайтах, где выполняется транзакция, и обеспечить
-единообразное выполнение решения. Когда обработка завершается на каждом сайте, она достигает состояния
-частично подтвержденной транзакции и ожидает, пока все другие транзакции достигнут их частично подтвержденных состояний.
-Когда он получает сообщение о том, что все сайты готовы к фиксации, он начинает фиксировать.
-В распределенной системе либо все сайты фиксируют, либо ни один из них не делает \autocite{FixProtocols}.
+Протоколы фиксации транзакций представляют собой механизм, обеспечивающий атомарность 
+выполнения транзакций в распределенных базах данных. Их основная задача — гарантировать, что все участвующие в 
+транзакции узлы либо зафиксируют изменения, либо откатят их, даже при возникновении сетевых сбоев или отказе отдельных 
+компонентов системы. \autocite{FixProtocols}
 
-Различные протоколы распределенной фиксации \autocite{FixProtocols}:
+Распределенная транзакция имеет дело с разделяемыми данными на нескольких географически рассредоточенных серверах. 
+На заключительном этапе каждый сервер должен выполнить некоторое количество завершающих операций, предписанных транзакцией. 
+На этой стадии все серверы, невзирая на отказы, должны согласовать окончательное решение — транзакция должна быть фиксирована 
+или прервана. Даже одного голоса, поданного за прерывание транзакции, достаточно для того, чтобы транзакция была прервана.
+ Какое бы решение ни было принято, оно должно быть передано всем участникам транзакции. 
+ 
+Условия задачи атомарного завершения (commitment):
+
 \begin{itemize}
-    \item Однофазный коммит
-    \item Двухфазный коммит
-    \item Трехфазный коммит
+    \item Согласие (Agreement). Все процессы принимают одно и то же решение.
+    \item Валидность (Validity). Если один из процессов голосует за прерывание, тогда транзакция должна быть прервана. 
+    Если все процессы голосуют за фиксацию, и отказы отсутствуют, тогда транзакция должна быть фиксирована.
+    \item Завершение (Termination). Все корректно работающие процессы должны в конечном счете прийти к финальному 
+    решению.
 \end{itemize}
-Широко используется протокол двухфазной фиксации (2PC).
-\bigbreak
+
+Протоколы фиксации спроектированы так, чтобы работать в асинхронной системе, в которой серверы могут отказывать и сообщения 
+могут теряться. Свойство согласия подразумевает, что все серверы достигают одного и того же решения \autocite{Fix}.
 
 \subsubsection{Распределенная однофазная фиксация}
 
-Распределенная однофазная фиксация – это самый простой протокол фиксации. Давайте рассмотрим, что есть
-контролирующий сайт и несколько подчиненных сайтов, где выполняется транзакция. Шаги в распределенном коммите \autocite{FixProtocols}:
-\begin{itemize}
-    \item После того, как каждое ведомое устройство локально завершило свою транзакцию, оно
-    отправляет сообщение «ГОТОВО» на контролирующий сайт
-    \item Подчиненные ожидают сообщения «Подтвердить» или «Прервать» с контролирующего сайта.
-    Это время ожидания называется окном уязвимости
-    \item Когда контролирующий сайт получает сообщение «СДЕЛАНО» от каждого ведомого, он принимает решение
-    о фиксации или отмене. Это называется точкой фиксации. Затем он отправляет это сообщение всем рабам
-    \item При получении этого сообщения ведомое устройство либо фиксирует, либо прерывает работу,
-    а затем отправляет подтверждающее сообщение на контролирующий сайт
-\end{itemize}
+Распределенная однофазная фиксация (Distributed One-Phase Commit, 1PC) представляет собой упрощенный протокол 
+атомарной фиксации транзакций в распределенных базах данных, требующий всего одного раунда обмена сообщениями 
+между координатором и участниками.
 
-После того, как каждое ведомое устройство локально завершило свою транзакцию, оно отправляет сообщение
-«ГОТОВО» на контролирующий сайт.
+Начиная транзакцию, клиентское приложение делает запрос одному из процессов службы поддержки транзакций на ближайшем 
+доступном сервере. Этот процесс становится координатором транзакции. Другие серверы, вовлеченные в эту транзакцию,
+называются участниками транзакции.
 
-Подчиненные ожидают сообщения «Подтвердить» или «Прервать» с контролирующего сайта. Это время ожидания
-называется окном уязвимости.
-
-Когда контролирующий сайт получает сообщение «СДЕЛАНО» от каждого ведомого, он принимает решение о
-фиксации или отмене. Это называется точкой фиксации. Затем он отправляет это сообщение всем рабам.
-
-При получении этого сообщения ведомое устройство либо фиксирует, либо прерывает работу,
-а затем отправляет подтверждающее сообщение на контролирующий сайт.
-
-\bigbreak
+Координатор распределяет работу по осуществлению транзакции между участниками и на заключительном этапе посылает 
+сообщение фиксация (COMMIT) или прерывание (ABORT) всем участникам транзакции и ждет, пока все они пришлют подтверждения 
+о том, что распоряжение выполнено. Это так называемая однофазная фиксация. При этом не исключено, что вследствие локальных 
+проблем (подобных отказу компонентов или конфликтам параллельного исполнения) некоторые участники не смогут проинформировать
+ о своем решении координатора и других участников. Поскольку решение должно быть принято в течение одной фазы, координатор и 
+ корректные участники, не будучи оповещенными о проблемах других участников, не смогут прийти к согласию относительно возможности
+фиксации или прерывания транзакции. Для практического применения необходима более сложная схема \autocite{Fix}.
 
 \subsubsection{Распределенная двухфазная фиксация}
 
-Распределенная двухфазная фиксация снижает уязвимость однофазных протоколов фиксации. Шаги, выполняемые на двух этапах \autocite{FixProtocols}:
-\bigbreak
-\textbf{Этап 1}
-\begin{itemize}
-    \item После того, как каждое ведомое устройство локально завершило свою транзакцию,
-    оно отправляет сообщение «ГОТОВО» на контролирующий сайт. Когда контролирующий сайт получил сообщение «ГОТОВО»
-    от всех подчиненных, он отправляет сообщение «Подготовить» подчиненным
-    \item Рабы голосуют за то, хотят ли они по-прежнему совершать или нет. Если ведомый
-    хочет зафиксировать, он отправляет сообщение «Готово»
-    \item Раб, который не хочет коммитить, отправляет сообщение «Не готов». Это может произойти,
-    если ведомое устройство имеет конфликтующие параллельные транзакции или истекло время ожидания
-\end{itemize}
+Протокол двухфазной фиксации (Two-phase Commit Protocol, 2РС) был спроектирован, чтобы преодолеть ограничения протокола
+однофазной фиксации. В течение первой фазы координатор посылает сообщение VOTE каждому участнику, спрашивая у них, намерены 
+ли они фиксировать транзакцию или прерывать ее. Далее координатор анализирует собранные ответы.
 
-После того, как каждое ведомое устройство локально завершило свою транзакцию, оно отправляет
-сообщение «ГОТОВО» на контролирующий сайт. Когда контролирующий сайт получил сообщение «ГОТОВО» от всех подчиненных,
-он отправляет сообщение «Подготовить» подчиненным.
+Если все серверы готовы фиксировать транзакцию, тогда в течение второй фазы координатор посылает всем участникам сообщение COMMIT. 
+В противном случае, если по крайней мере один из участников проголосовал за прерывание, координатор посылает всем участникам сообщение ABORT.
 
-Рабы голосуют за то, хотят ли они по-прежнему совершать или нет. Если ведомый хочет зафиксировать,
-он отправляет сообщение «Готово».
+Каждый участник после посылки своего голоса ждет получения сообщения (COMMIT или ABORT) от координатора. После получения сообщения каждый 
+участник локально выполняет необходимые действия по фиксации или прерыванию транзакции. Очевидно, что условия согласия, валидности и 
+завершения выполняются, и следовательно, протокол двухфазного подтверждения решает задачу распределенной фиксации транзакции \autocite{Fix}.
 
-Раб, который не хочет коммитить, отправляет сообщение «Не готов». Это может произойти, если ведомое
-устройство имеет конфликтующие параллельные транзакции или истекло время ожидания.
+\textbf{Обработка ошибок}
 
-\textbf{Этап 2}
+Протокол 2РС может попасть в трудную ситуацию в случае сбоя. Например, один из участников может отказать из-за поломки и, следовательно, не ответить. 
+Сообщения также могут быть потеряны. Это делает реализацию протокола двухфазной фиксации нетривиальной. В варианте чисто асинхронного исполнения, 
+когда координатор или участник блокируются в ожидании сообщения, они не смогут узнать, что произошло: поломка сервера, потеря или задержка сообщения. 
 
-\begin{itemize}
-    \item После того, как контролирующий сайт получил сообщение «Готово» от всех ведомых \autocite{FixProtocols} –
-    \begin{itemize}
-        \item Контролирующий сайт отправляет сообщение «Global Commit» подчиненным
-        \item Подчиненные устройства применяют транзакцию и отправляют сообщение «Подтвердить ACK» на контролирующий сайт
-        \item Когда контролирующий сайт получает сообщение «Подтвердить ACK» от всех ведомых
-        устройств, он считает транзакцию подтвержденной
-    \end{itemize}
-    \item После того, как контролирующий сайт получил первое сообщение «Не готов» от любого ведомого –
-    \begin{itemize}
-        \item Контролирующий сайт отправляет сообщение «Global Abort» подчиненным
-        \item Слэйвы отменяют транзакцию и отправляют сообщение «Abort ACK» на контролирующий сайт
-        \item Когда контролирующий сайт получает сообщение «Abort ACK» от всех ведомых
-        устройств, он считает транзакцию отмененной
-    \end{itemize}
+На практике для обнаружения потерь и отказов процессов часто используют таймауты, но это не считается надежным решением. Поэтому в случае любого сомнения 
+систему принято возвращать к безопасной конфигурации путем прерывания всех транзакций. Некоторые варианты отказов и способы борьбы с ними суммированы ниже.
 
-\end{itemize}
-\textbf{Обработка отказов}
+Вариант 1. Если (на фазе 1) координатор не получает ответа по крайней мере от одного участника в период таймаута, тогда он решает прервать транзакцию и 
+рассылает всем участникам сообщение ABORT.
 
-Введём следующие обозначения: T -- транзакция, инициированная сайтом $S_i$, координатором которого выступает $C_i$.
+Вариант 2. Если (на фазе 1) участник не получает сообщения VOTE от координатора в течение определенного таймаута, предполагая, что координатор отказал или 
+сообщение VOTE потеряно или задержано, он посылает сообщение ABORT координатору и затем локально прерывает транзакцию.
 
-\begin{itemize}
-\item Отказ сайта
+Вариант 3. Если (на фазе 2) участник не получает сообщение COMMIT или ABORT от координатора в течение оговоренного периода времени (это может быть случай 
+поломки координатора после посылки сообщений ABORT или COMMIT только части серверов), тогда он остается в состоянии неопределенности до тех пор, пока 
+координатор не восстановится и не реинсталлируется в системе. При этом на неопределенный период ресурсы могут оставаться заблокированными, мешая другим 
+транзакциям. По этой причине протокол 2РС также называют протоколом блокирующего подтверждения. Блокировка ресурсов — один из недостатков протокола 
+двухфазной фиксации \autocite{Fix}.
 
-Когда сайт восстанавливается, он просматривает свой журнал, чтобы определить судьбу транзакций, активных во время сбоя %\autocite{Fixations}:
-\begin{itemize}
-\item Журнал содержит запись <commit T>: сайт выполняет переотправку (T)
-\item Журнал содержит запись <abort T>: сайт выполняет отмену (T)
-\item Журнал содержит запись <ready T>: сайт должен обратиться к $C_i$, чтобы определить судьбу T.
-\begin{itemize}
-\item Если T зафиксировано, повторить (T)
-\item Если Т прервано, отмена (Т).
-\end{itemize}
-\item Журнал не содержит никаких управляющих записей относительно ответов T что $S_k$ потерпел неудачу, прежде чем ответил на сообщение prepare T от $C_i$
-\begin{itemize}
-\item поскольку отказ $S_k$ исключает отправку такого ответа $C_1$ должен прервать T
-\item $S_k$ должен выполнить отмену (T)
-\end{itemize}
-\end{itemize}  
-
-\item Отказ координатора
-
-Если координатор вышел из строя во время выполнения протокола фиксации для T то участвующие сайты должны принять решение о дальнейшей судьбе T %\autocite{Fixations}:
-\begin{itemize}
-\item Если активный сайт содержит запись <commit T> в своем журнале, то T должен быть зафиксирован.
-\item Если активный сайт содержит в своем журнале запись <abort T>, то T должен быть прерван.
-\item Если какой-либо активный участвующий сайт не содержит записи <ready T> в своем журнале, тогда отказавший координатор $C_i$ не может принять решение о фиксации T. Поэтому можно прервать T.
-\item Если ни один из вышеперечисленных случаев не подходит, то все активные сайты должны иметь запись <ready T> в своих журналах, но никаких дополнительных управляющих записей (таких как <abort T> из <commit T>). В этом случае активные сайты должны ждать, пока $C_i$ восстановится, чтобы найти решение.
-\item Проблема блокировки: активным сайтам, возможно, придется ждать, пока вышедший из строя координатора будет восстановлен.
-\end{itemize}
-\item Разделение сети
-
-Если координатор и все его участники остаются в одном разделе, отказ не влияет на протокол фиксации. %\autocite{Fixations}
-Если координатор и его участники принадлежат к нескольким разделам:
-\begin{itemize}
-\item Сайты, которые не находятся в разделе, содержащем координатора считают, что координатор вышел из строя, и выполняют протокол, соответствующий случаю отказа координатора.
-
-\end{itemize}
-Координатор и сайты, находящиеся в том же разделе, что и координатор считают, что сайты в другом разделе отказали, и следуют обычному протоколу фиксации.
-
-
-\end{itemize}
-
-\bigbreak
-\textbf{Контролирование управления и параллелизма}
-
-В случае обработки in-doubt (т.е. таких, о которых в логах есть запись <ready T>, но нет ни <commit T>, ни <abort T>) транзакций восстанавливающий сайт должен определить её commit-abort статус контактируя с другими сайтами, что может замедлить и, возможно, заблокировать процесс востановления %\autocite{Fixations}.
-
-Опишем основные принципы работы алгоритмов восстановления:
-\begin{itemize}
-    \item Алгоритмы могут записывать информацию о фиксациях в лог.
-    \item Вместо <ready T> вносится запись <ready T, L>, где L -- список фиксаций, удерживаемых транзакцие T при записи лога, причём фиксации чтения могут быть опущены.
-    \item Для каждой in-doubt транзакции T все фиксации, записанные в <ready T, L> запрашиваются снова.
-    \item После повторного получения фиксации обработка транзакции может быть продолжена, при этом фиксация/откат in-doubt транзакции выполняется параллельно с исполнением новых транзакций.
-\end{itemize}
-
-\bigbreak
 \subsubsection{Распределенная трехфазная фиксация}
 
 Шаги в распределенной трехфазной фиксации следующие \autocite{FixProtocols}:
