--- a/bibliography.bib
+++ b/bibliography.bib
@@ -95,6 +95,13 @@
     isbn    = {5-272-00053-65-272-00053-6}
 }
 
+@book{Fix,
+    author  = {{С. Л. Бабичев, К. А. Коньков}},
+    title   = {Распределенные системы : учебник для вузов},
+    year    = {2019},
+    isbn    = {978-5-534-11380-8}
+}
+
 @online{infosec,
     author = {{В. Ю. Статьев, В.А. Тиньков}},
     title = {{Информационная безопасность распределенных информационных систем}},
@@ -887,7 +894,7 @@
 @online{FixProtocols,
 	title = {{Распределенная СУБД — протоколы коммитов}},
 	url = {https://coderlessons.com/tutorials/akademicheskii/izuchite-raspredelennuiu-subd/raspredelennaia-subd-protokoly-kommitov},
-	urldate = {2024-06-12}
+	urldate = {2025-03-21}
 }
 
 @online{SecureFix,
