Adding a transcript of the abbreviation ETP and clarifying the terminology used

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -284,7 +284,9 @@ DCE (Distributed Computing Environment)~--- это система програм
 
 \subsubsection{Корпоративная среда обработки транзакций}~\\
 
-Корпоративная среда обработки транзакций представляет собой комплексную инфраструктуру для выполнения распределенных транзакций в масштабах 
+В этом разделе мы используем терминологию, предложенную автором статьи \autocite{TransactionMonitors}.
+
+Корпоративная среда обработки транзакций  (Enterprise Transaction Processing — ETP) представляет собой комплексную инфраструктуру для выполнения распределенных транзакций в масштабах 
 предприятия. Архитектура ETP строится на трех уровнях компьютерных систем \autocite{TransactionMonitors}:
 
 \begin{itemize}
