Added TPM examples

--- a/part/distributed.tex
+++ b/part/distributed.tex
@@ -282,6 +282,17 @@ DCE (Distributed Computing Environment)~--- это система програм
     \label{tpm_process}
 \end{figure}
 
+Примеры мониторов транзакций:
+\begin{itemize}
+  \item CICS (Система управления информацией о клиентах) для мэйнфреймов IBM;
+  \item IBM Information Management System (IMS, точнее, её компонент IMS TM, также известный как IMS DC);
+  \item ACMS (система управления приложениями) для OpenVMS;
+  \item UNIVAC TIP;
+  \item Transarc Encina;
+  \item Oracle Tuxedo
+\end{itemize}
+
+
 \subsubsection{Корпоративная среда обработки транзакций}~\\
 
 В этом разделе мы используем терминологию, предложенную автором статьи \autocite{TransactionMonitors}.
