--- a/bibliography.bib
+++ b/bibliography.bib
@@ -944,6 +944,7 @@
     title = {{Криптографические методы защиты информации. Учебное пособие.}},
     author = {{Владимиров С. М., Габидулин Э. М., Колыбельников А. И., Кшевецкий А. С.}},
     publisher = {{М.: МФТИ}},
+    url = {https://github.com/vlsergey/infosec/releases},
     ISBN = {{978-5-7417-0615-2}},
     year = 2016
 }
