--- a/part/confidentiality.tex
+++ b/part/confidentiality.tex
@@ -1,16 +1,24 @@
 \section{Механизмы обеспечения конфиденциальности в СУБД}
-\subsection{Классификация угроз конфиденциальности СУБД}
+\subsection{Угрозы конфиденциальности СУБД}
 
 \subsubsection{Причины, виды, основные методы нарушения конфиденциальности}
 
 Конфиденциальность – состояние информации, при котором доступ к ней осуществляют только субъекты,
-имеющие на него право.
+имеющие на него право \cite{crypto-methods} .
 
-Основными причинами нарушения конфиденциальности информации являются \cite{o-salo}:
+\textbf {Основные причины нарушения конфиденциальности} \cite{o-salo}:
 \begin{itemize}
-    \item несоблюдение персоналом норм, требований, правил эксплуатации АС
-    \item ошибки в проектировании АС и систем защиты АС
-    \item ведение противостоящей стороной технической и агентурной разведок
+    \item Несоблюдение персоналом норм, требований, правил эксплуатации АС
+    \item Ошибки в проектировании АС и систем защиты АС
+    \item Ведение противостоящей стороной технической и агентурной разведок
+\end{itemize}
+
+Несоблюдение персоналом норм, требований, правил эксплуатации АС может быть как умышленным, так и непреднамеренным. От ведения противостоящей стороной аген­турной разведки этот случай отличает то, что в данном случае лицом, совершающим не­санкционированные действия, двигают личные побудительные мотивы. Причины утечки информации достаточно тесно связаны с видами утечки информации. В соответствии с ГОСТ Р 50922–2006 \cite{GOST50922} рассматриваются три вида утечки информации:
+
+\begin{itemize}
+    \item Разглашение;
+    \item Несанкционированный доступ к информации;
+    \item Получение защищаемой информации разведками (отеч./иностр.).
 \end{itemize}
 
 Угрозы конфиденциальности информации направлены на несанкционированное перемещение информации от
