Added 3.3.3 "Виды блокировок"
Everything in 3.3.3 except last paragraph is finished

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1199,6 +1199,11 @@
     url={https://www.postgresql.org/docs/current/pgstatstatements.html}
 }
 
+@online{PgReference1,
+    title={PostgreSQL Documentation. Reference. SQL Commands},
+    url={https://www.postgresql.org/docs/current/sql-commands.html}
+}
+
 @online{HabrDataOrgp1,
     title={PostgreSQL 16. Организация данных. Часть 1},
     url={https://habr.com/ru/articles/813781/}
@@ -1222,6 +1227,11 @@
 @online{Mysqldoc4,
     title={MySQL 8.0 Reference Manual. Chapter 17},
     url={https://dev.mysql.com/doc/refman/8.0/en/innodb-storage-engine.html}
+}
+
+@online{Mysqldoc5,
+    title={MySQL 8.0 Reference Manual. Chapter 15},
+    url={https://dev.mysql.com/doc/refman/8.0/en/sql-statements.html}
 }
 
 @online{YTcoursepostgre,
@@ -1309,6 +1319,16 @@
     url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-transaction-isolation-level-transact-sql?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverTabHints,
+    title={Microsoft SQL Server. Table hints},
+    url={https://learn.microsoft.com/en-us/sql/t-sql/queries/hints-transact-sql-table?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverTransLock,
+    title={Microsoft SQL Server. Transaction locking and row versioning guide},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16}
+}
+
 @online{OracleRedoLog,
     title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
     url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
@@ -1342,6 +1362,11 @@
 @online{oracledbdoc5,
     title={Oracle Database Concepts. Part III. Oracle Transaction Management. Ch.9. Data Concurrency and Consistency},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/cncpt/data-concurrency-and-consistency.html#GUID-E8CBA9C5-58E3-460F-A82A-850E0152E95C}
+}
+
+@online{oracledbreference,
+    title={Oracle SQL Language Reference},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/}
 }
 
 @book{ElmasriNavathe,
