Corrected comments and finished 3.3.3 "Виды блокировок"
Corrected on comments

Finished part 3.3.3. "Виды блокировок"

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1194,6 +1194,11 @@
     url={https://www.postgresql.org/docs/current/mvcc.html}
 }
 
+@online{PostgreSQLdocc19,
+    title={PostgreSQL Documentation. Chapter 19. Server Configuration},
+    url={https://www.postgresql.org/docs/current/runtime-config.html}
+}
+
 @online{PgStatStatements1,
     title={PostgreSQL Documentation. Appendix F. F.30.},
     url={https://www.postgresql.org/docs/current/pgstatstatements.html}
@@ -1244,9 +1249,19 @@
     url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530}
 }
 
+@online{IntuitThreats,
+    title={Основы информационной безопасности. Лекция 3: Наиболее распространенные угрозы},
+    url={https://intuit.ru/studies/courses/10/10/lecture/300}
+}
+
 @online{HabrTsql,
     title={Исследуем базы данных с помощью T-SQL},
     url={https://habr.com/ru/articles/241079/}
+}
+
+@online{HabrCloudThreats,
+    title={Угрозы облачных вычислений и методы их защиты},
+    url={https://habr.com/ru/articles/183168/}
 }
 
 @online{professorweb,
@@ -1329,6 +1344,11 @@
     url={https://learn.microsoft.com/en-us/sql/relational-databases/sql-server-transaction-locking-and-row-versioning-guide?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverSetLockTout,
+    title={Microsoft SQL Server. SET LOCK TIMEOUT},
+    url={https://learn.microsoft.com/en-us/sql/t-sql/statements/set-lock-timeout-transact-sql?view=sql-server-ver16}
+}
+
 @online{OracleRedoLog,
     title={Oracle Database Administrator's Guide 11g Release 2 (11.2). What Is the Redo Log?},
     url={https://docs.oracle.com/cd/E18283_01/server.112/e17120/onlineredo001.htm}
@@ -1369,6 +1389,15 @@
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/sqlrf/}
 }
 
+@online{WikiExploit,
+    author={Wikipedia},
+    title={Уязвимость (компьютерная безопасность)},
+    url={https://ru.wikipedia.org/wiki/Уязвимость_(компьютерная_безопасность)}
+}
+@online{KasperskyDailyOAuth,
+    title={Google OAuth и фантомные аккаунты},
+    url={https://www.kaspersky.ru/blog/vulnerability-in-google-oauth/36822/}
+}
 @book{ElmasriNavathe,
     author    = {Ramez Elmasri, Shamkant B. Navathe},
     title     = {{Fundamentals of Database Systems. 6th edition}},
