fix: change text according to article

--- a/part/security.tex
+++ b/part/security.tex
@@ -203,9 +203,9 @@ Access List для пользователей, имеющих доступ к т
 
 Информация взята из \autocite{ASDViews}
 
-ASD\_Views –  это модель, использующая представления (views) в качестве объектов, обеспечивающих безопасность. 
-Основной целью данной модели является минимизация доверенной вычислительной базы (TCB – Trusted Computing Base). 
-Минимизация, в свою очередь, необходима для соответствия критериям класса B2 и выше.
+ASD\_Views – это модель, использующая представления (views) в качестве объектов, обеспечивающих безопасность. 
+Основной особенностью данной модели является небольшой размер доверенной вычислительной базы (TCB – Trusted Computing Base), 
+необходимый для соответствия критериям класса B2 и выше.
 
 Представления используются в реализации мандатной и дискреционной политик безопасности. 
 Представлениям при этом присваиваются метки конфиденциальности и списки контроля доступа. Пользователь при этом:
